Revision history for perl distribution Toadfarm

0.59 Not Released
 - Fix sudo to run with -H

0.58 2015-05-01T13:28:24+0200
 - Fix creating config with references

0.57 2015-04-30T23:24:53+0200
 - Fix './toadfarm.pl daemon' by setting a default TOADFARM_ACTION value

0.56 2015-04-28T17:36:26+0200
 - Will not run t/run-as.t unless TOADFARM_SUDO_TEST=1

0.55 2015-04-27T07:52:44+0200
 - Add support for Mojolicious::Plugin::SetUserGroup

0.54 2015-04-26T23:32:44+0200
 - Add run_as()
 - Unable to change user/group without setting TOADFARM_INSECURE=1
 - Unable to start as root without setting TOADFARM_INSECURE=1

0.53 2015-04-26T14:07:33+0200
 - Can generate local config file pr. app
 - Try to improve cpan testers result
 - Add note about previous Toadfarm version
 - Add note about plenv/perlbrew to RunningToadfarm
 - Move "Listen to standard HTTP ports" documentation to RunningToadfarm

0.52 2015-04-26T10:10:31+0200
 - Fix documentation #6 #8
 - Fix Toadfarm::Plugin::Reload #5
   https://developer.github.com/webhooks/#payloads
 - Can find hypnotoad, even if not in $PATH
 - Replaced -dsl with -init

0.51 2015-04-24T22:40:22+0200
 - Remove outdated documentation and examples
 - Add init-v example
 - Add crontab example
 - Improved "stop" command speed

0.50 2015-04-24T21:42:25+0200
 - Toadfarm DSL scripts can be used as init scripts
 - Deprecated script/toadfarm

0.49 2015-04-23T19:59:52+0200
 - Allow single application in DSL to be the only application

0.48 2015-04-23T19:40:05+0200
 - Add support for defining applications using DSL
 - Remove Ubic::Service::Toadfarm

0.47 2015-02-17T20:58:34Z
 - AccessLog will not log twice
 - AccessLog will not log without a status code
 - AccessLog can log timed out requests

0.46 2015-01-21T11:44:34Z
 - Add support for base url in AccessLog (X-Request-Base)
 - Object-Oriented Mojo::JSON API is DEPRECATED

0.45 2014-08-28T11:51:07Z
 - Fix toadfarm --start load config like Mojolicious

0.44 2014-05-30T08:00:13Z