@@ -2,6 +2,7 @@ Revision history for perl distribution Toadfarm
 
 0.59 Not Released
  - Fix sudo to run with -H
+ - Fix matching X-Request-Base with a regex
 
 0.58 2015-05-01T13:28:24+0200
  - Fix creating config with references
